todo items 3/4. Image 100% & menu alignment. Corrected icon class in HTML

--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -9,6 +9,11 @@
 }
 
 /* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
+.icon-menu {
+  font-size: 120%;
+  text-align: right;
+}
+
 
 .main-nav {
   padding: 0.1em;
